--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ nav{
 }
 .story{
     flex-basis: 18%;
-    padding-top: 32%;
+    padding-top: 28%;
     position: relative;
     background-position: center;
     background-size: cover;
@@ -877,7 +877,7 @@ nav{
         display: none;
     }
     .logo{
-        width: 100px;
+        width: 110px;
         margin-right: 20px;
     }
     nav{
@@ -898,7 +898,7 @@ nav{
         padding-left: 0px
     }
     .nav-left ul li img{
-        width: 15px;
+        width: 25px;
         margin: 0 1px;
     }
     
@@ -909,14 +909,13 @@ nav{
     
     .story{
         flex-basis: 19%;
-        height: 110px;
-        margin: 0;
+        height: 139px;
         
     }
     .story p{
         font-size: 9px;
         padding: 5px 0 9px 0;
-        
+        letter-spacing: 1px;
     }
     .story img{
         width: 20px;
@@ -924,21 +923,19 @@ nav{
         left: 10px;
     }
     .story1 img{
-        top: 65px;
-        left: 23px;
-        width: 25px;
+        left: 50%;
+        top: 50%;
+        width: 35px;
     }
     .story1 p{
-        font-size: 8px;
-        padding: 15px 0 10px 0;
-        
+        display: none;
 
     }
     .story-gallery{
-        width: 240px;
+        width: 100%;
     }
     .post-contaniner2{
-        width: 235px;
+        width: 100%;
         padding: 5px;
     }
     .post-row .activit-icon div img{
@@ -952,7 +949,7 @@ nav{
         
     }
     .post-container{
-        width: 240px;
+        width: 100%;
         padding: 5px;
         
     }
@@ -960,8 +957,8 @@ nav{
         padding: 2px 0px 0 0;
     }
     iframe{
-        width: 220px;
-        height: 120px;
+        width: 100%;
+        height: 195px;
     } 
     .uplod-img-ve a{
         
@@ -992,6 +989,9 @@ nav{
         position: absolute;
         top: 3px;
         right: 2px;
+    }
+    .main-ber{
+        flex-basis: 100%;
     }
 
     
